generated/C_ReducidoParser.js
// Generated from c:/Users/Lenovo/Desktop/Analizador/otro/53395/C_Reducido.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import C_ReducidoListener from './C_ReducidoListener.js';
import C_ReducidoVisitor from './C_ReducidoVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class C_ReducidoParser extends antlr4.Parser {

    static grammarFileName = "C_Reducido.g4";
    static literalNames = [ null, "' '", "'if'", "'else'", "'printf'", "'return'", 
                            "'('", "')'", "'{'", "'}'", "';'", "'\"'", "'0'", 
                            "'1'", null, null, "'.'", "','", "'!'", "'?'", 
                            "':'", "'''" ];
    static symbolicNames = [ null, null, "SI", "SINO", "IMPRIMIR", "RETORNAR", 
                             "PAREN_ABRE", "PAREN_CIERRA", "LLAVE_ABRE", 
                             "LLAVE_CIERRA", "PUNTO_COMA", "COMILLA_DOBLE", 
                             "CERO", "UNO", "LETRA", "DIGITO", "S_PUNTO", 
                             "S_COMA", "S_EXCLAMACION", "S_PREGUNTA", "S_DOS_PUNTOS", 
                             "S_COMILLA_SIMPLE", "IGNORAR_INNECESARIOS" ];
    static ruleNames = [ "programa", "instrucciones", "instruccion", "decision", 
                         "sentencia", "salida", "terminar", "condicion", 
                         "cadena", "caracteres", "caracter", "letra", "digito", 
                         "simbolo" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = C_ReducidoParser.ruleNames;
        this.literalNames = C_ReducidoParser.literalNames;
        this.symbolicNames = C_ReducidoParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 1:
    	    		return this.instrucciones_sempred(localctx, predIndex);
    	case 9:
    	    		return this.caracteres_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    instrucciones_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    caracteres_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, C_ReducidoParser.RULE_programa);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28;
	        this.instrucciones(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	instrucciones(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new InstruccionesContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, C_ReducidoParser.RULE_instrucciones, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 31;
	        this.instruccion();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 37;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new InstruccionesContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, C_ReducidoParser.RULE_instrucciones);
	                this.state = 33;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 34;
	                this.instruccion(); 
	            }
	            this.state = 39;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	instruccion() {
	    let localctx = new InstruccionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, C_ReducidoParser.RULE_instruccion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.decision();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decision() {
	    let localctx = new DecisionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, C_ReducidoParser.RULE_decision);
	    try {
	        localctx = new DecisionSiContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.match(C_ReducidoParser.SI);
	        this.state = 43;
	        this.match(C_ReducidoParser.PAREN_ABRE);
	        this.state = 44;
	        this.condicion();
	        this.state = 45;
	        this.match(C_ReducidoParser.PAREN_CIERRA);
	        this.state = 46;
	        this.match(C_ReducidoParser.LLAVE_ABRE);
	        this.state = 47;
	        this.sentencia();
	        this.state = 48;
	        this.match(C_ReducidoParser.LLAVE_CIERRA);
	        this.state = 54;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        if(la_===1) {
	            this.state = 49;
	            this.match(C_ReducidoParser.SINO);
	            this.state = 50;
	            this.match(C_ReducidoParser.LLAVE_ABRE);
	            this.state = 51;
	            this.sentencia();
	            this.state = 52;
	            this.match(C_ReducidoParser.LLAVE_CIERRA);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentencia() {
	    let localctx = new SentenciaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, C_ReducidoParser.RULE_sentencia);
	    try {
	        this.state = 61;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 56;
	            this.salida();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 57;
	            this.salida();
	            this.state = 58;
	            this.sentencia();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 60;
	            this.terminar();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	salida() {
	    let localctx = new SalidaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, C_ReducidoParser.RULE_salida);
	    try {
	        localctx = new MostrarTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 63;
	        this.match(C_ReducidoParser.IMPRIMIR);
	        this.state = 64;
	        this.match(C_ReducidoParser.PAREN_ABRE);
	        this.state = 65;
	        this.cadena();
	        this.state = 66;
	        this.match(C_ReducidoParser.PAREN_CIERRA);
	        this.state = 67;
	        this.match(C_ReducidoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terminar() {
	    let localctx = new TerminarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, C_ReducidoParser.RULE_terminar);
	    try {
	        localctx = new FinalizarContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.match(C_ReducidoParser.RETORNAR);
	        this.state = 70;
	        this.match(C_ReducidoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condicion() {
	    let localctx = new CondicionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, C_ReducidoParser.RULE_condicion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        _la = this._input.LA(1);
	        if(!(_la===12 || _la===13)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, C_ReducidoParser.RULE_cadena);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(C_ReducidoParser.COMILLA_DOBLE);
	        this.state = 75;
	        this.caracteres(0);
	        this.state = 76;
	        this.match(C_ReducidoParser.COMILLA_DOBLE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	caracteres(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new CaracteresContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 18;
	    this.enterRecursionRule(localctx, 18, C_ReducidoParser.RULE_caracteres, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.caracter();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 85;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new CaracteresContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, C_ReducidoParser.RULE_caracteres);
	                this.state = 81;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 82;
	                this.caracter(); 
	            }
	            this.state = 87;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	caracter() {
	    let localctx = new CaracterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, C_ReducidoParser.RULE_caracter);
	    try {
	        this.state = 92;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 14:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 88;
	            this.letra();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 89;
	            this.digito();
	            break;
	        case 16:
	        case 17:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 90;
	            this.simbolo();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 91;
	            this.match(C_ReducidoParser.T__0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letra() {
	    let localctx = new LetraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, C_ReducidoParser.RULE_letra);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(C_ReducidoParser.LETRA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	digito() {
	    let localctx = new DigitoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, C_ReducidoParser.RULE_digito);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(C_ReducidoParser.DIGITO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simbolo() {
	    let localctx = new SimboloContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, C_ReducidoParser.RULE_simbolo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 98;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 4128768) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

C_ReducidoParser.EOF = antlr4.Token.EOF;
C_ReducidoParser.T__0 = 1;
C_ReducidoParser.SI = 2;
C_ReducidoParser.SINO = 3;
C_ReducidoParser.IMPRIMIR = 4;
C_ReducidoParser.RETORNAR = 5;
C_ReducidoParser.PAREN_ABRE = 6;
C_ReducidoParser.PAREN_CIERRA = 7;
C_ReducidoParser.LLAVE_ABRE = 8;
C_ReducidoParser.LLAVE_CIERRA = 9;
C_ReducidoParser.PUNTO_COMA = 10;
C_ReducidoParser.COMILLA_DOBLE = 11;
C_ReducidoParser.CERO = 12;
C_ReducidoParser.UNO = 13;
C_ReducidoParser.LETRA = 14;
C_ReducidoParser.DIGITO = 15;
C_ReducidoParser.S_PUNTO = 16;
C_ReducidoParser.S_COMA = 17;
C_ReducidoParser.S_EXCLAMACION = 18;
C_ReducidoParser.S_PREGUNTA = 19;
C_ReducidoParser.S_DOS_PUNTOS = 20;
C_ReducidoParser.S_COMILLA_SIMPLE = 21;
C_ReducidoParser.IGNORAR_INNECESARIOS = 22;

C_ReducidoParser.RULE_programa = 0;
C_ReducidoParser.RULE_instrucciones = 1;
C_ReducidoParser.RULE_instruccion = 2;
C_ReducidoParser.RULE_decision = 3;
C_ReducidoParser.RULE_sentencia = 4;
C_ReducidoParser.RULE_salida = 5;
C_ReducidoParser.RULE_terminar = 6;
C_ReducidoParser.RULE_condicion = 7;
C_ReducidoParser.RULE_cadena = 8;
C_ReducidoParser.RULE_caracteres = 9;
C_ReducidoParser.RULE_caracter = 10;
C_ReducidoParser.RULE_letra = 11;
C_ReducidoParser.RULE_digito = 12;
C_ReducidoParser.RULE_simbolo = 13;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_programa;
    }

	instrucciones() {
	    return this.getTypedRuleContext(InstruccionesContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstruccionesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_instrucciones;
    }

	instruccion() {
	    return this.getTypedRuleContext(InstruccionContext,0);
	};

	instrucciones() {
	    return this.getTypedRuleContext(InstruccionesContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterInstrucciones(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitInstrucciones(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitInstrucciones(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstruccionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_instruccion;
    }

	decision() {
	    return this.getTypedRuleContext(DecisionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterInstruccion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitInstruccion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitInstruccion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DecisionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_decision;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class DecisionSiContext extends DecisionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	SI() {
	    return this.getToken(C_ReducidoParser.SI, 0);
	};

	PAREN_ABRE() {
	    return this.getToken(C_ReducidoParser.PAREN_ABRE, 0);
	};

	condicion() {
	    return this.getTypedRuleContext(CondicionContext,0);
	};

	PAREN_CIERRA() {
	    return this.getToken(C_ReducidoParser.PAREN_CIERRA, 0);
	};

	LLAVE_ABRE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(C_ReducidoParser.LLAVE_ABRE);
	    } else {
	        return this.getToken(C_ReducidoParser.LLAVE_ABRE, i);
	    }
	};


	sentencia = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(SentenciaContext);
	    } else {
	        return this.getTypedRuleContext(SentenciaContext,i);
	    }
	};

	LLAVE_CIERRA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(C_ReducidoParser.LLAVE_CIERRA);
	    } else {
	        return this.getToken(C_ReducidoParser.LLAVE_CIERRA, i);
	    }
	};


	SINO() {
	    return this.getToken(C_ReducidoParser.SINO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterDecisionSi(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitDecisionSi(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitDecisionSi(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

C_ReducidoParser.DecisionSiContext = DecisionSiContext;

class SentenciaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_sentencia;
    }

	salida() {
	    return this.getTypedRuleContext(SalidaContext,0);
	};

	sentencia() {
	    return this.getTypedRuleContext(SentenciaContext,0);
	};

	terminar() {
	    return this.getTypedRuleContext(TerminarContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterSentencia(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitSentencia(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitSentencia(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SalidaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_salida;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class MostrarTextoContext extends SalidaContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	IMPRIMIR() {
	    return this.getToken(C_ReducidoParser.IMPRIMIR, 0);
	};

	PAREN_ABRE() {
	    return this.getToken(C_ReducidoParser.PAREN_ABRE, 0);
	};

	cadena() {
	    return this.getTypedRuleContext(CadenaContext,0);
	};

	PAREN_CIERRA() {
	    return this.getToken(C_ReducidoParser.PAREN_CIERRA, 0);
	};

	PUNTO_COMA() {
	    return this.getToken(C_ReducidoParser.PUNTO_COMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterMostrarTexto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitMostrarTexto(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitMostrarTexto(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

C_ReducidoParser.MostrarTextoContext = MostrarTextoContext;

class TerminarContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_terminar;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class FinalizarContext extends TerminarContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	RETORNAR() {
	    return this.getToken(C_ReducidoParser.RETORNAR, 0);
	};

	PUNTO_COMA() {
	    return this.getToken(C_ReducidoParser.PUNTO_COMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterFinalizar(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitFinalizar(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitFinalizar(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

C_ReducidoParser.FinalizarContext = FinalizarContext;

class CondicionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_condicion;
    }

	CERO() {
	    return this.getToken(C_ReducidoParser.CERO, 0);
	};

	UNO() {
	    return this.getToken(C_ReducidoParser.UNO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterCondicion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitCondicion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitCondicion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CadenaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_cadena;
    }

	COMILLA_DOBLE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(C_ReducidoParser.COMILLA_DOBLE);
	    } else {
	        return this.getToken(C_ReducidoParser.COMILLA_DOBLE, i);
	    }
	};


	caracteres() {
	    return this.getTypedRuleContext(CaracteresContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterCadena(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitCadena(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitCadena(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CaracteresContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_caracteres;
    }

	caracter() {
	    return this.getTypedRuleContext(CaracterContext,0);
	};

	caracteres() {
	    return this.getTypedRuleContext(CaracteresContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.enterCaracteres(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof C_ReducidoListener ) {
	        listener.exitCaracteres(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof C_ReducidoVisitor ) {
	        return visitor.visitCaracteres(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CaracterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = C_ReducidoParser.RULE_caracter;
    }

	letra() {
	    return this.getTypedRuleContext(LetraContext,0);
	};

	digito() {
	    return this.getTypedRuleContext(DigitoContext,0);
	};

	simbolo() {
	    return this.getTypedRuleContext(SimboloContext,0);
	};
